--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.1"
 gunicorn = "^22.0.0"
 psycopg2-binary = "^2.9.9"
 validators = "^0.20.0"
+requests = "^2.32.3"
 
 
 [build-system]
