--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ gunicorn = "^22.0.0"
 psycopg2-binary = "^2.9.9"
 validators = "^0.20.0"
 requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
 
 
 [build-system]
