--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
 
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.1.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
